nav-top completa

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <title>Discord Fake</title>
 </head>
 <body>
+
+    <header>
+        <div class="container">
+            <nav class="clearfix nav-top"> 
+                <ul class="fl logo">
+                    <li>
+                        <img src="./img/logo.svg" alt="logo-discord">
+                    </li> 
+                </ul>
+                <ul class="fl menu">
+                    <li>Scarica</li>
+                    <li>Perché Discord?</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                </ul>
+                <ul class="fl login">
+                    <li>login</li>
+                </ul>
+
+            </nav>
+
+        </div>
+
+    </header>
+
     
 </body>
 </html>
