--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@
                 <ul class="fl login">
                     <li>login</li>
                 </ul>
-
             </nav>
+
+            
+            <div class="jumbo-content">
+                <h1> Il tuo posto per parlare</h1>
+                <div>
+                    <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                </div>
+            </div>
+
+            
 
         </div>
 
