--- a/index.html
+++ b/index.html
@@ -35,13 +35,34 @@
                 <div>
                     <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                 </div>
+                <div class="buttons-container">
+                    <div class="button">Scarica per Windows</div>
+                    <div class="button">Apri Discord nel tuo browser</div>
+
+                </div>
+            </div>         
+        </div>
+    </header>
+
+    <main>
+        <div class="container clearfix">
+            <div class="fl img-container">
+                <img src="./img/item1.svg" alt="rana-che-legge">
+
+            </div>
+            <div class="fl img-text-container">
+                <div class="img-text">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+
+
+                </div>
+
             </div>
 
-            
 
         </div>
-
-    </header>
+    </main>
 
     
 </body>
