--- a/index.html
+++ b/index.html
@@ -54,14 +54,24 @@
                 <div class="img-text">
                     <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                     <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
-
-
                 </div>
+            </div>
+        </div>
+
+        <div class="container clearfix">
+            <div class="fl img-text-container">
+                <div class="img-text">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
+            </div>
+            <div class="fl img-container">
+                <img src="./img/item2.svg" alt="mago-magia">
 
             </div>
-
-
         </div>
+
+
     </main>
 
     
