--- a/index.html
+++ b/index.html
@@ -86,15 +86,17 @@
                 <h2>Tecnologia affidabile per tenersi in contatto</h2>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="./img/item4-big.svg" alt="">
-
+                <div>Pronto a iniziare la tua avventura?</div>
+                <div class="button">
+                    Scarica per Windows
+                </div>
             </div>
-
         </div>
-
-
-
-
     </main>
+
+    <footer>
+        
+    </footer>
 
     
 </body>
