dettagli header completi

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Discord Fake</title>
 </head>
@@ -11,6 +13,8 @@
 
     <header>
         <div class="container">
+
+            <!-- nav-top bar -->
             <nav class="clearfix nav-top"> 
                 <ul class="fl logo">
                     <li>
@@ -25,11 +29,11 @@
                     <li>Assistenza</li>
                 </ul>
                 <ul class="fl login">
-                    <li>login</li>
+                    <li>Accedi</li>
                 </ul>
             </nav>
 
-            
+            <!-- jumbo img text  -->
             <div class="jumbo-content">
                 <h1> Il tuo posto per parlare</h1>
                 <div>
@@ -38,7 +42,6 @@
                 <div class="buttons-container">
                     <div class="button">Scarica per Windows</div>
                     <div class="button">Apri Discord nel tuo browser</div>
-
                 </div>
             </div>         
         </div>
