--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     </header>
 
     <main>
+
+        <!-- image with text  1st-->
         <div class="container clearfix">
             <div class="fl img-container">
                 <img src="./img/item1.svg" alt="rana-che-legge">
@@ -60,6 +62,7 @@
             </div>            
         </div>
 
+        <!-- text with image  2nd-->
         <div class="container clearfix">
             <div class="fl img-text-container">
                 <div class="img-text">
@@ -72,6 +75,7 @@
             </div>
         </div>
 
+        <!-- image with text 3rd-->
         <div class="container clearfix">
             <div class="fl img-container">
                 <img src="./img/item3.svg" alt="rana-che-legge">
@@ -84,17 +88,22 @@
             </div>            
         </div>
 
+        <!-- big image  -->
         <div class="container rel">
             <div class="content-abs">
-                <h2>Tecnologia affidabile per tenersi in contatto</h2>
-                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
-                <img src="./img/item4-big.svg" alt="">
-                <div id="stella">Pronto a iniziare la tua avventura?</div>
-                <div class="button">Scarica per Windows</div>
+                <div>
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <img src="./img/item4-big.svg" alt="">
+                    <div id="stella">Pronto a iniziare la tua avventura?</div>
+                    <div class="button">Scarica per Windows</div>
+
+                </div>
             </div>
         </div>
     </main>
 
+    <!-- FOOTER  -->
     <footer>
 
         <div class="container clearfix">
