--- a/index.html
+++ b/index.html
@@ -89,14 +89,12 @@
         </div>
 
         <!-- big image  -->
-        <div class="container rel">
-            <div class="content-abs">
-                <h2>Tecnologia affidabile per tenersi in contatto</h2>
-                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
-                <img src="./img/item4-big.svg" alt="">
-                <div id="stella">Pronto a iniziare la tua avventura?</div>
-                <div class="button">Scarica per Windows</div>  
-            </div>
+        <div class="container big-img">            
+            <h2>Tecnologia affidabile per tenersi in contatto</h2>
+            <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+            <img src="./img/item4-big.svg" alt="">
+            <div id="stella">Pronto a iniziare la tua avventura?</div>
+            <div class="button">Scarica per Windows</div>              
         </div>
     </main>
 
