--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
             <img src="./img/item4-big.svg" alt="">
             <div id="stella">Pronto a iniziare la tua avventura?</div>
-            <div class="button">Scarica per Windowss</div>              
+            <div class="button">&#8595; Scarica per Windows</div>              
         </div>
     </main>
 
@@ -104,6 +104,10 @@
         <div class="container clearfix">
             <div class="footer-main fl">
                 <h3>Il tuo posto per parlare</h3>
+                <img src="./img/ita.png" alt="">
+                <select name="" id="">
+                    <option value="">italiano</option>
+                </select>
     
             </div>
             <!-- prima lista  -->
