ultimo problema il bottone

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- FOOTER  -->
     <footer>
 
-        <div class="container clearfix">
+        <div class="container clearfix all-footer">
             <div class="footer-main fl">
                 <h3>Il tuo posto per parlare</h3>
                 <img src="./img/ita.png" alt="">
@@ -166,7 +166,7 @@
                     </li> 
                 </ul>
                 <ul class="fr login">
-                    <li>login</li>
+                    <li>Registrati</li>
                 </ul>
             </nav>
         </div>
