--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
             <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
             <img src="./img/item4-big.svg" alt="">
             <div id="stella">Pronto a iniziare la tua avventura?</div>
-            <div class="button">&#8595; Scarica per Windows</div>              
+            <div class="inutile">
+                <div class="button">Scarica per Windows</div>              
+            </div>
         </div>
     </main>
 
