prova wave andata male

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             </div>            
         </div>
 
+        <div class="bg-img">
+
+        </div>
+
         <!-- text with image  2nd-->
         <div class="container clearfix">
             <div class="fl img-text-container">
@@ -75,6 +79,10 @@
             </div>
         </div>
 
+        <div class="bg-img">
+
+        </div>        
+
         <!-- image with text 3rd-->
         <div class="container clearfix">
             <div class="fl img-container">
@@ -87,6 +95,10 @@
                 </div>
             </div>            
         </div>
+
+        <div class="bg-img">
+
+        </div>        
 
         <!-- big image  -->
         <div class="container big-img">            
